Attempt to fix overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -71,6 +71,7 @@ html, body, #root {
 .footer {
     margin-top: 1rem;
     grid-area: footer;
+    padding-bottom: calc(env(safe-area-inset-bottom, 0px));
 }
 
 @media screen and (max-width: 1024px) {
@@ -192,7 +193,6 @@ html, body, #root {
     justify-content: space-between;
     padding: 1.5rem 1.5rem;
     border-top: 1px solid white;
-    overflow-y: auto;
 }
 
 .icon {
